# PracticeII-ExperimentalAnalysisOfAlgorithmsAndDataStructures

./: CMakeLists.txt  README.md
documentation/: Technical Report.docx
include/: Benchmarker.hpp  DataGenerator.hpp  DialSort.hpp  IAlgorithm.hpp  ParallelBucketSort.hpp  ParallelQuickSort.hpp  ParallelRadixSort.hpp  ResultExporter.hpp  Visualizer.hpp
src/: Benchmarker.cpp  DataGenerator.cpp  DialSort.cpp  ParallelBucketSort.cpp  ParallelQuickSort.cpp  ParallelRadixSort.cpp  Visualizer.cpp  main.cpp
web/: index.html  results.json
